# ClaudeHack

./: LICENSE
backend/: .gitignore  API_DOCS.md  QUICK_START.md  README.md  generate_images.py  imagegenerator.py  postman_collection.json  pyproject.toml  server.py
backend/dataset/: four_lakes_menu (6).csv  nov19.csv
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  FoodCards.css  FoodCards.jsx
